# from-model-scores-to-governed-decisions

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: part-1-practical-threshold-evaluation-flow.mmd  part-1-threshold-operating-zones.mmd  part-2-enterprise-decision-architecture.mmd  part-2-governance-ownership-model.mmd  part-2-human-override-feedback-loop.mmd  part-2-policy-engine-control-plane.mmd  part-2-threshold-drift-monitoring-loop.mmd  part-2-threshold-lifecycle-governance.mmd
colab-lab/: README.md  from_model_scores_to_governed_decisions_colab_lab.ipynb
data/: sample_validation_predictions.csv
docs/: article-step-to-code-map.md  part-1-threshold-tuning-in-python.md  part-2-enterprise-ai-governance.md
examples/: 00_article_concept_map.py  01_sample_validation_data.py  02_apply_threshold.py  03_evaluate_baseline_threshold.py  03b_probability_calibration_review.py  04_threshold_sweep.py  05_business_value_ranking.py  06_capacity_safe_thresholds.py  07_compare_candidate_thresholds.py  08_visualize_tradeoffs.py  08b_roc_vs_precision_recall.py  09_reusable_threshold_report.py  10_select_threshold_with_guardrails.py  11_compare_default_vs_selected.py  12_segment_specific_thresholds.py  13_production_decision_log.py  14_common_anti_patterns.py  15_stakeholder_explanation.py  complete_working_example.py
tests/: test_anti_patterns_and_concepts.py  test_business_value.py  test_calibration.py  test_capacity.py  test_decision_logging.py  test_metrics.py  test_operating_curves.py  test_reporting.py  test_thresholding.py
(+14 files in other folders)
